...
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="40dp"
    android:layout_margin="15dp"
    android:backgroundTint="#75767A"
    android:id="@+id/recyclerViewPage"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
