<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/health02"
    android:orientation="vertical"
    android:id="@+id/loginActivity"
    tools:context=".Login">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100px"
        android:text="Login"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textSize="45dp"
        android:gravity="center"
        android:textColor="#1D2D8A"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:inputType="phone"
        android:id="@+id/phone"
        android:maxLines="1"
        android:textStyle="bold"
        android:hint="Phone"
        android:padding="15dp"
        android:background="@drawable/rounded"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_marginTop="40dp"
        android:maxLines="1"
        android:hint="Password"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@drawable/rounded"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        android:text="Login"
        android:backgroundTint="#1790F1"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/bottomText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dont have an Account ? "
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="16dp"
            />

        <TextView
            android:id="@+id/register_now_button"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="5dp"
            android:text="Register Now"
            android:textColor="#030E4A"
            android:textStyle="bold"

            />

    </LinearLayout>


</LinearLayout>
